app/assets/stylesheets/global.scss
/* ... */
.regenerate-key {
  background-image: url(image_path('icon_new_key_white.svg'));
  background-repeat: no-repeat;
  background-color: lighten($type-lighter-color, 10%);
  width: 28px;
  height: 28px;
  display: block;
  padding: 0;
  background-size: 24px 24px;
  background-position: center center;
}

.role-list span {
  width: 100%;
  display: block;
  padding: 3px;
  input {
    margin-right: 3px;
  }
}

hr.thin.extra-bottom-marg {
  margin-bottom: 30px;
}

.users-flash-wrapper {
  display: inline-block;
}

.team-flash-wrapper {
  margin-left: 20px;
  margin-top: 17px;
  margin-bottom: -17px;
}

.profile-flash-wrapper {
  position: absolute;
  margin-left: 3px;
  margin-top: 7px;
}

.flash-msg {
  font-weight: 400;
  font-size: 9pt;
  color: $type-lighter-color;
  padding: 0;
  border: none;
  margin: 0;
}

.flash-msg::before {
  content: '';
  display: block;
  width: 22px;
  height: 22px;
  background-repeat: no-repeat;
  background-position: center;
  float: left;
  margin-top: -6px;
  margin-right: 4px;
}

.flash-msg-alert-info::before {
  background-image: url(image_path('icon_success.svg'));
}

.flash-msg-alert-danger::before, .flash-type-alert-error::before {
  background-image: url(image_path('icon_error.svg'));
}

.small-flash-button {
  display: block;
  width: 13px;
  height: 13px;
  background-repeat: no-repeat;
  background-position: center;
  background-image: url(image_path('icon_cancel_grey.svg'));
  float: right;
  border: none;
  margin-left: 3px;
  opacity: 0.6;
}

.small-flash-button:hover {
  opacity: 1;
}

// webrep dispute index > ensure break/wrap properly for long url's containing parameters
#disputes-index .entry-col-content {
  word-break: break-all;
  max-width: 250px;
}

// webrep disputes index table, domain or ip column
span.input-truncate {
  display: inline-block;
  position: relative;
  padding-right: 25px;
  width: 200px !important;
}

// webrep dispute index > ensure the dispute count is to the right of the domain entry
.dispute-count {
  position: absolute;
  left: 180px;
  float: none;
  border-radius: 5px;
  padding: 1px 5px;
}

.dispute-entry-col {
  min-width: 200px;
}

.owner-col {
  min-width: 80px;
}

// retain top navigation at top of page during scroll down for nav accessibility
#nav-banner.fixed-nav {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  z-index: 999;
}

.pin-to-top-button {
  background-image: url(image_path('icon_pin1.svg'));
  background-size: 22px 22px;
  background-position: 3px 3px;
  padding-left: 18px;
}

.pinned-toolbar {
  background: $content-bg-color;
  box-shadow: 2px 0 10px 1px rgba(0,0,0,0.3);
  position: relative;
  bottom: 18px;
  padding: 4px 20px;
  .toolbar-checkbox-wrapper {
    padding-top: 0;
    padding-left: 5px;
    font-weight: normal;
  }
  label {
    display: none;
  }
}

#webcat-index-title {
  padding-top: 10px;
}

#webcat-index-toolbar {
  margin: 15px 0 10px;
}

.pinned-toolbar-true #webcat-index-title {
  padding-top: 25px;
  line-height: 12px;
}

#webcat_searchref_container {
  margin-bottom: 10px;
  padding: 6px 0;
}

// tooltipster adjustments for pinned toolbar tooltips
.pinned-toolbar-true .tooltipster-sidetip .tooltipster-box {
  padding: 4px 6px;
}

// one-off override
.pinned-toolbar-true .tooltipster-sidetip {
  top: 85px !important;
}

.webcat-search-container {
  height: 15px;
}

// correction to reduce extraneous vertical space
.pinned-toolbar-true .webcat-search-container {
  height: 0;
}

